// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: CalcDataInput should render CalcDataInput by default 1`] = `
<DocumentFragment>
  <div
    class="calc-data-input"
  >
    <h1>
      Введите данные
    </h1>
    <div
      class="calc-input"
    >
      <input
        class="null"
        placeholder="Введите число"
        type="text"
        value=""
      />
    </div>
    <div
      class="calc-input"
    >
      <input
        class="null"
        placeholder="Введите число"
        type="text"
        value=""
      />
    </div>
    <div
      class="add-item"
      tabindex="0"
    >
      +
    </div>
    <button>
      Далее
    </button>
  </div>
</DocumentFragment>
`;

exports[`Component: CalcDataInput should render CalcDataInput with added items < 10 1`] = `
<DocumentFragment>
  <div
    class="calc-data-input"
  >
    <h1>
      Введите данные
    </h1>
    <div
      class="calc-input"
    >
      <input
        class="null"
        placeholder="Введите число"
        type="text"
        value="1"
      />
    </div>
    <div
      class="calc-input"
    >
      <input
        class="null"
        placeholder="Введите число"
        type="text"
        value="2"
      />
    </div>
    <div
      class="added-item"
    >
      <div
        class="calc-input"
      >
        <input
          class="null"
          placeholder="Введите число"
          type="text"
          value="3"
        />
      </div>
      <div
        class="remove-item"
        tabindex="0"
      >
        -
      </div>
    </div>
    <div
      class="add-item"
      tabindex="0"
    >
      +
    </div>
    <button>
      Далее
    </button>
  </div>
</DocumentFragment>
`;

exports[`Component: CalcDataInput should render CalcDataInput with added items > 10 1`] = `
<DocumentFragment>
  <div
    class="calc-data-input"
  >
    <h1>
      Введите данные
    </h1>
    <div
      class="calc-input"
    >
      <input
        class="null"
        placeholder="Введите число"
        type="text"
        value="1"
      />
    </div>
    <div
      class="calc-input"
    >
      <input
        class="null"
        placeholder="Введите число"
        type="text"
        value="2"
      />
    </div>
    <div
      class="added-item"
    >
      <div
        class="calc-input"
      >
        <input
          class="null"
          placeholder="Введите число"
          type="text"
          value="3"
        />
      </div>
      <div
        class="remove-item"
        tabindex="0"
      >
        -
      </div>
    </div>
    <div
      class="added-item"
    >
      <div
        class="calc-input"
      >
        <input
          class="null"
          placeholder="Введите число"
          type="text"
          value="4"
        />
      </div>
      <div
        class="remove-item"
        tabindex="0"
      >
        -
      </div>
    </div>
    <div
      class="added-item"
    >
      <div
        class="calc-input"
      >
        <input
          class="null"
          placeholder="Введите число"
          type="text"
          value="5"
        />
      </div>
      <div
        class="remove-item"
        tabindex="0"
      >
        -
      </div>
    </div>
    <div
      class="added-item"
    >
      <div
        class="calc-input"
      >
        <input
          class="null"
          placeholder="Введите число"
          type="text"
          value="6"
        />
      </div>
      <div
        class="remove-item"
        tabindex="0"
      >
        -
      </div>
    </div>
    <div
      class="added-item"
    >
      <div
        class="calc-input"
      >
        <input
          class="null"
          placeholder="Введите число"
          type="text"
          value="7"
        />
      </div>
      <div
        class="remove-item"
        tabindex="0"
      >
        -
      </div>
    </div>
    <div
      class="added-item"
    >
      <div
        class="calc-input"
      >
        <input
          class="null"
          placeholder="Введите число"
          type="text"
          value="8"
        />
      </div>
      <div
        class="remove-item"
        tabindex="0"
      >
        -
      </div>
    </div>
    <div
      class="added-item"
    >
      <div
        class="calc-input"
      >
        <input
          class="null"
          placeholder="Введите число"
          type="text"
          value="9"
        />
      </div>
      <div
        class="remove-item"
        tabindex="0"
      >
        -
      </div>
    </div>
    <div
      class="added-item"
    >
      <div
        class="calc-input"
      >
        <input
          class="null"
          placeholder="Введите число"
          type="text"
          value="10"
        />
      </div>
      <div
        class="remove-item"
        tabindex="0"
      >
        -
      </div>
    </div>
    <div
      class="added-item"
    >
      <div
        class="calc-input"
      >
        <input
          class="null"
          placeholder="Введите число"
          type="text"
          value="11"
        />
      </div>
      <div
        class="remove-item"
        tabindex="0"
      >
        -
      </div>
    </div>
    <button>
      Далее
    </button>
  </div>
</DocumentFragment>
`;
